Archive2/b0/26e1d4cb89cd1d/main.cpp
#include <iostream>
#include <string>
#include <functional>

template<typename Func, typename = typename std::result_of<Func()>::type>
void asdf(Func doThing) {
    auto val = doThing();
}


int main()
{
    asdf([&]() {
        return std::string { "qwer" };
    });
    // rejected
    asdf([](int) {});
    return 0;
}


